# Youtube-Video-Summarization

./: .gitignore  README.md
backend/: chromewebstore.google.com_cookies.txt  cookies.txt  main.py  pyproject.toml  requirements.txt
backend/src/: request_validate.py  video_extract.py
frontend/: package.json
frontend/src/: index.css
frontend/src/components/: chatBotBody.jsx  request.js
