[tool.poetry]
name = "Youtube Video Summarization"
version = "0.1.0"
description = "Youtube Video Summarization"
authors = ["Navaneethan J <naveenkrishnan840@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.8"
uvicorn = "0.34.0"
llama-index = "0.12.15"
llama-index-vector-stores-lancedb = "0.3.0"
moviepy = "2.1.2"
lancedb = "0.18.0"
yt-dlp = "2025.1.30.232843.dev0"
transformers = "4.48.2"
torch = "2.4.1"
ffmpeg-python = "0.2.0"
llama-index-multi-modal-llms-huggingface = "0.4.0"
llama-index-llms-huggingface-api = "0.3.1"
llama-index-llms-huggingface = "0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
